feat: hoàn thành F06